crates/strider-analyze/tests/snapshots/ppc32le__floats__f32_arith.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10000000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "7" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x3f800000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "10" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Div:f64", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "21" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Neg\nf64 → f64", shape=box, fillcolor="#1a3020"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "29" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Mul:f64", shape=box, fillcolor="#1a3020"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "33" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "17" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "34" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "26" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "38" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "18" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "44" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
